appId: com.ourlime.app
---
- launchApp:
    clearState: true
- assertVisible: "Welcome Back"
- tapOn: "Email or username"
- inputText: ${TEST_EMAIL}
- tapOn: "Password"
- inputText: ${TEST_PASSWORD}
- hideKeyboard
- tapOn: "Log In"
- assertVisible: "Home Feed"
